fix footer view on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -421,7 +421,6 @@ dl dd {
 #footer {
   margin: -155px 0 0;
   height: 155px;
-  padding: 0 10px;
   position: relative;
   font-size: 17px;
 }
