--- a/src/sass/modules/_index.scss
+++ b/src/sass/modules/_index.scss
@@ -101,7 +101,6 @@
 #footer {
   margin: -155px 0 0;
   height: 155px;
-  padding:0 $siteSidePaddings;
   position: relative;
   font-size: 17px;
   a {
